swagger integrated and working
